@@ -33,7 +33,6 @@ import java.lang.ref.WeakReference;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -52,6 +51,7 @@ import org.omegat.core.data.NotLoadedProject;
 import org.omegat.core.data.ProjectFactory;
 import org.omegat.core.data.ProjectProperties;
 import org.omegat.core.data.RealProject;
+import org.omegat.core.data.TestCoreState;
 import org.omegat.core.events.IProjectEventListener;
 import org.omegat.core.segmentation.SRX;
 import org.omegat.core.segmentation.Segmenter;
@@ -90,8 +90,7 @@ public class EditorProjectReloadLeakTest extends TestCore {
     @Before
     public final void setUpProject() throws Exception {
         Core.setSegmenter(new Segmenter(SRX.getDefault()));
-        FilterMaster.setFilterClasses(Arrays.asList(TextFilter.class));
-        Core.setFilterMaster(new FilterMaster(FilterMaster.createDefaultFiltersConfig()));
+        TestCoreState.initFilters(List.of(TextFilter.class));
 
         projectRoot = Files.createTempDirectory("omegat-leak").toFile();
         StringBuilder sb = new StringBuilder();
